# group-movement

./: CMakeLists.txt
collect/: pack.sh  visualize.sh
examples/: functions.sh
examples/buses/: Makefile  fim.sh  fim_list.txt  group.sh  group_list.txt  map.sh  map_list.txt  match.sh  match_list.txt  mkfilelist.rb  parallel_fim.sh  parallel_group.sh  parallel_map.sh  parallel_match.sh  run.sh
examples/busses/: Makefile  fim.sh  group.sh  mkfilelist.rb  run.sh  schoolbuses.txt
examples/random/: random.conf  run.sh
examples/trucks/: Makefile  fim.sh  fim_list.txt  group.sh  group_list.txt  map.sh  map_list.txt  match.sh  match_list.txt  mkfilelist.rb  parallel_fim.sh  parallel_group.sh  parallel_map.sh  parallel_match.sh  run.sh  trucks.txt
explore/: attachment.sh  both.sh  functions.sh  overlap.sh
explore/buses/: both_list.txt  overlap_list.txt  parallel_attachment.sh  parallel_both.sh  parallel_overlap.sh
explore/random-0/: parallel_attachment.sh  parallel_both.sh  parallel_overlap.sh  random.conf
explore/random-25/: both_list.txt  parallel_attachment.sh  parallel_both.sh  parallel_overlap.sh  random.conf
explore/random-50/: .parallel_attachment.sh.swp  parallel_attachment.sh  parallel_both.sh  parallel_overlap.sh  random.conf
explore/random-95/: parallel_attachment.sh  parallel_both.sh  parallel_overlap.sh  random.conf
explore/spiral-0/: overlap_list.txt  parallel_attachment.sh  parallel_both.sh  parallel_overlap.sh  spiral.conf
explore/spiral-25/: parallel_attachment.sh  parallel_both.sh  spiral.conf  (+1 more)
fim-app/: AFOPTMine.cpp  AFOPTMine.h  ArrayMine.cpp  ArrayMine.h  CMakeLists.txt  Global.cpp  Global.h  MemTracer.cpp  MemTracer.h  ScanDBMine.cpp  ScanDBMine.h  TimeTracer.cpp  TimeTracer.h  afopt_all.cpp  afopt_all_rlimit.cpp  afopt_close.cpp  afopt_max.cpp  afopt_max_rlimit.cpp  cfptree_outbuf.cpp  cfptree_outbuf.h  data.cpp  data.h  disclaimer.txt  fsout.cpp  fsout.h  hash_map.cpp  hash_map.h  parameters.cpp  parameters.h  patternsetmanager.cpp  patternsetmanager.h
include/: base.h  heap.h  list.h
src/: CMakeLists.txt  base.c  both.c  cc.c  enumerate.c  eps.c  heap.c  levels.c  list.c  map.c  match.c  nc.c  nc2.c  parallel.c  parallel_batch.c  pdf.c  timeslice.c  topk.c  visualize.c  void.c  wc.c  wc2.c
tools/: convert.rb  datagen.rb
(+17 files in other folders)
