project(fim-app)
add_library(fim Global.cpp ScanDBMine.cpp AFOPTMine.cpp ArrayMine.cpp data.cpp fsout.cpp hash_map.cpp parameters.cpp)
add_executable(fim_closed cfptree_outbuf.cpp afopt_close.cpp)
target_link_libraries (fim_closed fim)
add_executable(fim_all afopt_all.cpp)
target_link_libraries (fim_all fim)
add_executable(fim_max patternsetmanager.cpp afopt_max.cpp)
target_link_libraries (fim_max fim)
add_executable(fim_max_rlimit patternsetmanager.cpp afopt_max_rlimit.cpp)
target_link_libraries (fim_max_rlimit fim)
