EXEC_PROGRAM("pkg-config --cflags cairo libpng12" OUTPUT_VARIABLE CAIRO_C_FLAGS)
EXEC_PROGRAM("pkg-config --libs cairo libpng12" OUTPUT_VARIABLE CAIRO_LIBS)
#SET(CAIRO_C_FLAGS "-I/home/obaltzer/opt/include/cairo")
#SET(CAIRO_LIBS "-L/home/obaltzer/opt/lib -lcairo -lz")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CAIRO_C_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${CAIRO_LIBS}")
include_directories(${gridcube_SOURCE_DIR}/include)
add_library(gridcube base.c list.c heap.c)
add_executable(map map.c)
target_link_libraries(map gridcube)
add_executable(visualize visualize.c)
target_link_libraries(visualize gridcube)
add_executable(enumerate enumerate.c)
target_link_libraries(enumerate gridcube)
add_executable(match match.c)
target_link_libraries(match gridcube)
add_executable(cc cc.c)
target_link_libraries(cc gridcube)
add_executable(nc nc.c)
target_link_libraries(nc gridcube)
add_executable(timeslice timeslice.c)
target_link_libraries(timeslice gridcube)
add_executable(levels levels.c)
target_link_libraries(levels gridcube)
add_executable(topk topk.c)
target_link_libraries(topk gridcube)
add_executable(wc wc.c)
target_link_libraries(wc gridcube)
add_executable(nc2 nc2.c)
target_link_libraries(nc2 gridcube)
add_executable(wc2 wc2.c)
target_link_libraries(wc2 gridcube)
add_executable(amalgamate amalgamate.c)
target_link_libraries(amalgamate gridcube)
add_executable(both both.c)
target_link_libraries(both gridcube)
add_executable(parallel parallel.c)
target_link_libraries(parallel gridcube mpi lam dl pthread)
add_executable(parallel_batch parallel_batch.c)
target_link_libraries(parallel_batch gridcube mpi lam dl pthread)
